--- a/S04.02-Exercise-DisplayDayForecast/app/src/main/res/layout/activity_detail.xml
+++ b/S04.02-Exercise-DisplayDayForecast/app/src/main/res/layout/activity_detail.xml
@@ -3,4 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/tv_weather_details"
+        android:text="Weather Details Here"
+        android:textSize="22sp"
+        />
+
 </FrameLayout>
