--- a/S09.05-Exercise-MoreDetails/app/src/main/res/layout/activity_detail.xml
+++ b/S09.05-Exercise-MoreDetails/app/src/main/res/layout/activity_detail.xml
@@ -14,28 +14,67 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<!-- TODO (1) Change the FrameLayout to a vertical LinearLayout -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- COMPLETED (1) Change the FrameLayout to a vertical LinearLayout -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:orientation="vertical">
 
-    <!-- TODO (2) Remove the tv_display_weather TextView -->
-    <!-- Text that describes the weather summary for a given day -->
+    <!-- COMPLETED (2) Remove the tv_display_weather TextView -->
+
+
+    <!-- COMPLETED (3) Add a TextView for the selected day's date -->
     <TextView
-        android:id="@+id/tv_display_weather"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
-        tools:text="Saturday, October 1 - Sunny - 78° / 63°"/>
-    <!-- TODO (3) Add a TextView for the selected day's date -->
-    <!-- TODO (4) Add a TextView for the selected day's weather description -->
-    <!-- TODO (5) Add a TextView for the selected day's high temperature -->
-    <!-- TODO (6) Add a TextView for the selected day's low temperature -->
-    <!-- TODO (7) Add a TextView for the selected day's humidity -->
-    <!-- TODO (8) Add a TextView for the selected day's pressure -->
-    <!-- TODO (9) Add a TextView for the selected day's wind -->
+        style="@style/TextAppearance.AppCompat.Large"
+        android:id="@+id/date"
+        android:text="Saturday, September 24" />
+    <!-- COMPLETED (4) Add a TextView for the selected day's weather description -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.AppCompat.Large"
+        android:id="@+id/weather_description"
+        android:text="Rainy" />
+    <!-- COMPLETED (5) Add a TextView for the selected day's high temperature -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.AppCompat.Large"
+        android:id="@+id/high_temperature"
+        android:text="30\u00b0" />
+    <!-- COMPLETED (6) Add a TextView for the selected day's low temperature -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.AppCompat.Large"
+        android:id="@+id/low_temperature"
+        android:text="10\u00b0" />
+    <!-- COMPLETED (7) Add a TextView for the selected day's humidity -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.AppCompat.Large"
+        android:id="@+id/humidity"
+        android:text="10%" />
+    <!-- COMPLETED (8) Add a TextView for the selected day's pressure -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.AppCompat.Large"
+        android:id="@+id/pressure"
+        android:text="995 hPa" />
 
-</FrameLayout>
+    <!-- COMPLETED (9) Add a TextView for the selected day's wind -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.AppCompat.Large"
+        android:id="@+id/wind"
+        android:text="4km/h NW" />
+
+</LinearLayout>
 
