--- a/S09.05-Solution-MoreDetails/app/src/main/res/layout/activity_detail.xml
+++ b/S09.05-Solution-MoreDetails/app/src/main/res/layout/activity_detail.xml
@@ -30,7 +30,7 @@
         android:id="@+id/date"
         style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="wraSp_content"
         tools:text="Saturday, September 24"/>
 
     <!-- COMPLETED (4) Add a TextView for the selected day's weather description -->
